--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-brands": "^5.0.6",
+    "@fortawesome/fontawesome-pro-light": "^5.0.6",
+    "@fortawesome/vue-fontawesome": "0.0.22",
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
     "jslint": "^0.11.0",
