--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0",
     "jslint": "^0.11.0",
+    "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "reading-time": "^1.1.0",
     "vue": "^2.5.2",
